fix FF issue where map is too small to show all layers in layerswitcher

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -275,7 +275,8 @@ legend {
 }
 
 #layerswitcher.olControlLayerSwitcher {
-/*font-size:14px !important;*/
+    /*font-size:14px !important;*/
+    width: 25em;
 }
 
 .olControlLayerSwitcher .layersDiv {
